# react-native-canvas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Canvas.podspec  DESIGN.md  LICENSE  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: AndroidGpuSurface.cpp  AndroidGpuSurface.h  canvas_jni.cpp
android/src/main/cpp/skia/include/gpu/ganesh/d3d/: GrD3DTypes.h
android/src/main/java/com/canvas/: CanvasModule.kt  CanvasPackage.kt  CanvasView.kt  CanvasViewManager.kt  OnPressEvent.kt  OnTouchEvent.kt
cpp/: CanvasContext.cpp  CanvasContext.h  CanvasGradient.cpp  CanvasGradient.h  CanvasImage.cpp  CanvasImage.h  CanvasInstaller.cpp  CanvasInstaller.h  CanvasRegistry.cpp  CanvasRegistry.h  CanvasRenderer.cpp  CanvasRenderer.h  CanvasRuntime.cpp  CanvasRuntime.h  ColorParser.cpp  ColorParser.h  CommandList.h  FilterParser.cpp  FilterParser.h  FontParser.cpp  FontParser.h  FrameLoop.cpp  FrameLoop.h  ImageDecode.h  JsiBytes.h  Path2D.cpp  Path2D.h  PathHitTest.h  TextMeasure.h
example/: package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/canvas/example/: MainActivity.kt  MainApplication.kt
example/ios/: Podfile
example/ios/CanvasExample/: AppDelegate.swift  Info.plist
example/ios/CanvasExample.xcodeproj/: project.pbxproj
example/ios/CanvasExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
example/src/pages/: BubblesPage.tsx  ClipPage.tsx  CompositePage.tsx  DragPage.tsx  FilterPage.tsx  GradientsPage.tsx  HitTestPage.tsx  ImagePage.tsx  LineStylesPage.tsx  ShadowsPage.tsx  ShapesPage.tsx  TextPage.tsx  TransformsPage.tsx
ios/: CanvasModule.h  CanvasModule.mm  CanvasView.h  CanvasView.mm  MetalCanvasSurface.h  MetalCanvasSurface.mm
scripts/: build-skia.sh
src/: Canvas.tsx  CanvasView.native.tsx  CanvasView.tsx  CanvasViewNativeComponent.ts  NativeCanvasModule.ts  fonts.ts  index.tsx  types.ts  useCanvasFramer.ts  useCanvasRef.ts  useEntity.ts  useImage.ts
